Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107250

qmllint crashes with fuzz input

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.5.0 Beta1
    • 6.4.0
    • QML: Tooling
    • 18333db9af (qt/qtdeclarative/dev) 18333db9af (qt/tqtc-qtdeclarative/dev)

    Description

      The attached file as qmllint input gets causes a segmentation fault

      Attachments

        For Gerrit Dashboard: QTBUG-107250
        # Subject Branch Project Status CR V

        Activity

          People

            semih.yavuz Semih Yavuz
            semih.yavuz Semih Yavuz
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes