tests/auto/qml/qmllint/data/unresolvedArrayBinding.qml
@@ -1,0 +1,10 @@
+import QtQuick
+
+Item {
+    states : [
+        foo{},
+        bar {},
+        State {},
+        foo {}
+    ]
+}
